# RoboPuppet

./: .gitignore  CMakeLists.txt  README.md  arduinoCalibrate.py  arduinoSerialRelay.py  arduinoSimControl.py  filters.py  messagePublisher.py  readArduino.py  settings.py  syntheticSerialRelay.py  val3serialclient.cpp
Arduino/: read_5_pins.ino
Val3/: CS8Emulator.cpp  CS8Emulator.h  SafeTrajClient.cpp  SafeTrajClient.h  TrajClient.cpp  TrajClient.h  TrajServerEmulator.cpp  Val3Interface.cpp  Val3Interface.h  Val3RobotInterface.h  tx90l_specs.xml  tx90lsafe_specs.xml  tx90right.xml  tx90right_hispeed.xml  tx90right_medhispeed.xml  tx90right_medspeed.xml
Val3/v1.0/: CS8Emulator.cpp  CS8Emulator.h  MultiTrajClient.h  SafeTrajClient.cpp  SafeTrajClient.h  Timer.cpp  Timer.h  TrajClient.cpp  TrajClient.h  TrajServerEmulator.cpp  TrajServerEmulator.h  Val3Interface.cpp  Val3Interface.h  VirtualClient.cpp  VirtualClient.h
data/: tx90room.xml  tx90roombox.xml
data/robots/: robotiq_frozen.off  robotiq_frozen_simple.off  tx90robotiq_frozen.rob
data/robots/tx90l/: part1.off  part1_simple.off  part2.off  part2_simple.off
tx90/: calibrate.configs
