# Make the Klamp't examples 
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(IROS2014RoboPuppet)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY .)
SET(KLAMPT_ROOT ../Klampt)
SET (CMAKE_MODULE_PATH "${KLAMPT_ROOT}/CMakeModules")
file(GLOB VAL3_FILES Val3/*.cpp)

# COMPILER SETTINGS (default: Release) and flags
INCLUDE(CompilerSettings)
FIND_PACKAGE(Klampt REQUIRED)
ADD_DEFINITIONS(${KLAMPT_DEFINITIONS})
INCLUDE_DIRECTORIES(${KLAMPT_INCLUDE_DIRS})

ADD_EXECUTABLE(SafeSerialClient safeserialclient.cpp)
TARGET_LINK_LIBRARIES(SafeSerialClient ${KLAMPT_LIBRARIES})

ADD_EXECUTABLE(Val3SerialClient val3serialclient.cpp ${VAL3_FILES})
TARGET_LINK_LIBRARIES(Val3SerialClient ${KLAMPT_LIBRARIES})
